[gd_scene load_steps=12 format=3 uid="uid://5gbthj3j2q6e"]

[ext_resource type="Script" path="res://scripts/game.gd" id="1_8ljd3"]
[ext_resource type="Texture2D" uid="uid://c2jgcrsqxv01v" path="res://assets/textures/bg.png" id="1_aijun"]
[ext_resource type="PackedScene" uid="uid://cml7aivn1os6e" path="res://scenes/hud.tscn" id="2_6wllj"]
[ext_resource type="PackedScene" uid="uid://bridybj6qco5w" path="res://scenes/player.tscn" id="2_we5op"]
[ext_resource type="PackedScene" uid="uid://dske5j40fpbko" path="res://scenes/enemy_spawner.tscn" id="3_hqg8o"]
[ext_resource type="Script" path="res://scripts/hud.gd" id="3_pg87p"]
[ext_resource type="AudioStream" uid="uid://dmq16kpopb0yi" path="res://assets/audio/hit.wav" id="7_317o4"]
[ext_resource type="AudioStream" uid="uid://5g8rqgk5ydik" path="res://assets/audio/explode.wav" id="8_sr7g3"]
[ext_resource type="PackedScene" uid="uid://bbajc4aagkia3" path="res://scenes/path_enemy.tscn" id="9_md0nx"]
[ext_resource type="Script" path="res://scripts/ScrollingBG.gd" id="10_cdvw3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7adrr"]
size = Vector2(85.5, 767)

[node name="Game" type="Node2D"]
script = ExtResource("1_8ljd3")

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" parent="UI" instance=ExtResource("2_6wllj")]
script = ExtResource("3_pg87p")

[node name="Player" parent="." instance=ExtResource("2_we5op")]
position = Vector2(94, 360)

[node name="EnemySpawner" parent="." instance=ExtResource("3_hqg8o")]

[node name="EnemyDespawner" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDespawner"]
position = Vector2(-180, 360)
shape = SubResource("RectangleShape2D_7adrr")

[node name="EnemyHitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_317o4")

[node name="PlayerDieSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_sr7g3")

[node name="PathEnemy" parent="." instance=ExtResource("9_md0nx")]

[node name="ScrollingBG" type="ParallaxBackground" parent="."]
scroll_ignore_camera_zoom = true
script = ExtResource("10_cdvw3")

[node name="ParallaxLayer" type="ParallaxLayer" parent="ScrollingBG"]
motion_mirroring = Vector2(600, 600)

[node name="Sprite2D" type="Sprite2D" parent="ScrollingBG/ParallaxLayer"]
position = Vector2(300, 300)
texture = ExtResource("1_aijun")

[node name="Sprite2D2" type="Sprite2D" parent="ScrollingBG/ParallaxLayer"]
position = Vector2(900, 300)
texture = ExtResource("1_aijun")

[node name="Sprite2D3" type="Sprite2D" parent="ScrollingBG/ParallaxLayer"]
position = Vector2(1500, 300)
texture = ExtResource("1_aijun")

[connection signal="took_damage" from="Player" to="." method="_on_player_took_damage"]
[connection signal="enemy_spawned" from="EnemySpawner" to="." method="_on_enemy_spawner_enemy_spawned"]
[connection signal="path_enemy_spawned" from="EnemySpawner" to="." method="_on_enemy_spawner_path_enemy_spawned"]
[connection signal="area_entered" from="EnemyDespawner" to="." method="_on_enemy_despawner_area_entered"]
